<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        
        <TextView
        	android:id="@+id/loc_winner"
        	android:orientation="vertical"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/loc_winner_text" />
        
        <Spinner
       		android:id="@+id/spinner1"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:entries="@array/locations_array"
        	android:prompt="@string/locations" />
        
        <Button
        	android:id="@+id/save_location"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/save_locs" />
        	
        <TextView
            android:id="@+id/ap_reads"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:text="@string/update_pos" />
        	
    </LinearLayout>
